--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 on: push
 jobs:
   bash-example:
-    runs-on: my-runer
+    runs-on: self-hosted
     steps:
       - name: Group of log lines
         run: |
