--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
       - name: List files in the repository
         run: |
-          ls ${{ github.workspace }}
+          cp ${{ github.workspace }}/index.html /var/www/html/index.html
       - run: echo "🍏 This job's status is ${{ job.status }}."
 
 
