testing PR cicd printing changes on the create branch

--- a/.github/workflows/on_PR.yaml
+++ b/.github/workflows/on_PR.yaml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-        
+
       - name: Print files changed in PR
         run: |
-            git --no-pager diff --name-only ${{ github.base_ref }} ${{ github.head_ref }}
+            git --no-pager diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.sha }}
