--- a/.github/workflows/on_PR.yaml
+++ b/.github/workflows/on_PR.yaml
@@ -16,12 +16,13 @@ jobs:
         id: pr_files
         run: |
             PR_NUMBER=$(jq --raw-output .pull_request.number "$GITHUB_EVENT_PATH")
-            echo "PR_NUMBER=$PR_NUMBER" >> $GITHUB_ENV
             FILES=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-                    "https://api.github.com/repos/${{ github.repository }}/pulls/$PR_NUMBER/files" | \
-                    jq -r '.[].filename')
+                "https://api.github.com/repos/${{ github.repository }}/pulls/$PR_NUMBER/files" | \
+                 jq -r '.[].filename')
             echo "FILES=$FILES" >> $GITHUB_ENV
 
       - name: Print files changed
         run: |
             echo "Files changed in this PR: $FILES"
+        env:
+          FILES: ${{ env.FILES }}
