--- a/.github/workflows/on_PR.yaml
+++ b/.github/workflows/on_PR.yaml
@@ -12,15 +12,20 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
+    - name: Get PR number
+      id: get_pr_number
+      run: echo "PR_NUMBER=$(jq --raw-output .pull_request.number "$GITHUB_EVENT_PATH")" >> $GITHUB_ENV
+
     - name: Get PR files
       id: pr_files
       run: |
-        PR_NUMBER=$(jq --raw-output .pull_request.number "$GITHUB_EVENT_PATH")
-        FILES=$(jq --raw-output '.pull_request.changed_files[]' "$GITHUB_EVENT_PATH")
+        FILES=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+                "https://api.github.com/repos/${{ github.repository }}/pulls/${{ env.PR_NUMBER }}/files" | \
+                jq -r '.[].filename')
         echo "FILES=$FILES" >> $GITHUB_ENV
 
     - name: Print files changed
-      run: |
-         echo "Files changed in this PR: $FILES"
+      run: | 
+        echo "Files changed in this PR: $FILES"
       env:
         FILES: ${{ env.FILES }}
