--- a/.github/workflows/on_PR.yaml
+++ b/.github/workflows/on_PR.yaml
@@ -18,12 +18,14 @@ jobs:
         PR_NUMBER=$(jq --raw-output .pull_request.number "$GITHUB_EVENT_PATH")
         echo "PR_NUMBER=$PR_NUMBER" >> $GITHUB_ENV
 
-    - name: Fetch PR files
-      id: fetch_pr_files
+    - name: Get PR files
+      id: pr_files
       run: |
-        PR_FILES=$(jq --raw-output '.pull_request.files | map(.filename) | join(", ")' "$GITHUB_EVENT_PATH")
-        echo "PR_FILES=$PR_FILES" >> $GITHUB_ENV
+        FILES=$(curl -s -H "Authorization: token ${{ secrets.GB_TOKEN }}" \
+                "https://api.github.com/repos/${{ github.repository }}/pulls/${{ env.PR_NUMBER }}/files" | \
+                jq -r '.[].filename')
+        echo "FILES=$FILES" >> $GITHUB_ENV
 
     - name: Print files changed
-      run: |
-         echo "Files changed in this PR: ${{ env.PR_FILES }}"
+      run: | 
+        echo "Files changed in this PR: ${{ env.FILES }}"
