--- a/.github/workflows/on_PR.yaml
+++ b/.github/workflows/on_PR.yaml
@@ -23,9 +23,9 @@ jobs:
       run: |
         FILES=$(curl -s -H "Authorization: token ${{ secrets.GB_TOKEN }}" \
                 "https://api.github.com/repos/${{ github.repository }}/pulls/${{ env.PR_NUMBER }}/files" | \
-                jq -r '.[].filename')
+                jq -r 'map(.filename) | join(", ")')
         echo "FILES=$FILES" >> $GITHUB_ENV
 
     - name: Print files changed
-      run: | 
+      run: |
         echo "Files changed in this PR: ${{ env.FILES }}"
