--- a/.github/workflows/on_PR.yaml
+++ b/.github/workflows/on_PR.yaml
@@ -10,7 +10,13 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
+
+    - name: Install GitHub CLI
+      run: sudo apt-get install gh
+
+    - name: Authenticate GitHub CLI
+      run: gh auth setup-git
 
     - name: Get PR number
       id: get_pr_number
@@ -18,16 +24,14 @@ jobs:
         PR_NUMBER=$(jq --raw-output .pull_request.number "$GITHUB_EVENT_PATH")
         echo "PR_NUMBER=$PR_NUMBER" >> $GITHUB_ENV
 
-    - name: Fetch PR files
-      id: fetch_pr_files
+    - name: Get PR files
+      id: pr_files
       run: |
+        PR_NUMBER=${{ env.PR_NUMBER }}
         echo "Fetching files for PR number: $PR_NUMBER"
-        RESPONSE=$(curl -s -H "Authorization: token ${{ secrets.GB_TOKEN }}" \
-                 "https://api.github.com/repos/${{ github.repository }}/pulls/${{ env.PR_NUMBER }}/files")
-        echo "Response: $RESPONSE"  # Debugging output
-        FILES=$(echo "$RESPONSE" | jq -r '.[].filename | join(", ")')
+        FILES=$(gh pr view $PR_NUMBER --json files -q '.files[].path')
         echo "FILES=$FILES" >> $GITHUB_ENV
 
     - name: Print files changed
-      run: |
+      run: | 
         echo "Files changed in this PR: ${{ env.FILES }}"
